Kubernetes/stockAPI/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: stock
  name: stock
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stock
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/testmicroservice-main: "true"
        io.kompose.service: stock
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              valueFrom:
                configMapKeyRef:
                  key: ASPNETCORE_ENVIRONMENT
                  name: stockapi
            - name: DatabaseSettings__ConnectionString
              value: "mongodb://stockdb:27018"
          image: timothelfvr/stock:latest
          name: stock
          ports:
            - containerPort: 5001
              hostPort: 8001
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
