Kubernetes/stockAPI/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: stock
  name: stock
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 5001
  selector:
    io.kompose.service: stock
status:
  loadBalancer: {}
